--- a/admin.html
+++ b/admin.html
@@ -3,85 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>بوابة معالجة البيانات</title>
+  <title>بوابة الأرشيف العلمي</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
     body { font-family: 'Cairo', sans-serif; background-color: #020617; color: #f1f5f9; }
-    
-    /* تنسيق الجدول للاب توب */
-    .desktop-table { display: none; width: 100%; border-spacing: 0 4px; border-collapse: separate; }
-    @media (min-width: 1024px) { .desktop-table { display: table; } }
-
-    /* تنسيق البطاقات للجوال */
-    .mobile-list { display: block; }
-    @media (min-width: 1024px) { .mobile-list { display: none; } }
-
-    .archive-item { 
-        background: #0f172a; border: 1px solid #1e293b; transition: 0.2s;
-    }
-    .archive-item:hover { border-color: #3b82f6; background: #1e293b; }
-
-    input, textarea { 
-        background: #020617 !important; border: 1px solid #334155 !important; 
-        color: #f1f5f9 !important; border-radius: 8px; outline: none;
-    }
+    .archive-item { background: #0f172a; border: 1px solid #1e293b; transition: 0.2s; }
+    .archive-item:hover { border-color: #3b82f6; }
+    input, textarea { background: #020617 !important; border: 1px solid #334155 !important; color: #f1f5f9 !important; border-radius: 8px; outline: none; }
     input:focus, textarea:focus { border-color: #3b82f6 !important; }
-
-    /* إخفاء السكرول بار */
-    ::-webkit-scrollbar { width: 4px; }
-    ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
+    @media (min-width: 1024px) { .desktop-table { display: table; width: 100%; border-spacing: 0 5px; border-collapse: separate; } }
+    @media (max-width: 1023px) { .desktop-table { display: none; } }
   </style>
 </head>
 <body class="p-2 md:p-6">
 
   <div class="max-w-[1400px] mx-auto">
-    <header class="flex justify-between items-center mb-6 bg-slate-900/50 p-4 rounded-2xl border border-slate-800">
+    <header class="flex justify-between items-center mb-4 bg-slate-900/50 p-4 rounded-2xl border border-slate-800">
       <div class="flex items-center gap-3">
-        <div class="w-2 h-2 bg-blue-500 rounded-full animate-pulse"></div>
-        <h1 class="text-sm font-bold">بوابة الأرشيف</h1>
+        <div class="w-3 h-3 bg-blue-500 rounded-full animate-pulse shadow-[0_0_10px_#3b82f6]"></div>
+        <h1 class="text-sm font-black tracking-widest uppercase">Scientific Archive</h1>
       </div>
-      <div id="whoami" class="text-[10px] text-slate-500 font-mono"></div>
-      <button id="logoutBtn" class="hidden text-[10px] text-red-500/70 hover:text-red-500">خروج</button>
+      <div id="whoami" class="text-xs font-bold text-blue-400">جاري التحقق...</div>
     </header>
 
     <main id="adminPanel" class="hidden">
+      <div class="bg-blue-600/10 border border-blue-500/20 p-4 rounded-2xl mb-6 flex items-center justify-between">
+        <div class="flex items-center gap-3">
+          <span class="text-xl">📊</span>
+          <p id="productivityStats" class="text-xs md:text-sm font-bold text-blue-100">جاري حساب إنجازك اليوم...</p>
+        </div>
+        <button id="logoutBtn" class="text-[10px] bg-red-500/10 text-red-400 px-3 py-1 rounded-lg hover:bg-red-500/20">خروج</button>
+      </div>
+
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
         <div class="flex gap-1 bg-slate-900 p-1 rounded-xl border border-slate-800">
-            <button class="filterBtn flex-1 py-2 text-[11px] font-bold rounded-lg transition-all" data-filter="pending">المعلقة</button>
-            <button class="filterBtn flex-1 py-2 text-[11px] font-bold rounded-lg transition-all" data-filter="approved">المعتمدة</button>
-            <button class="filterBtn flex-1 py-2 text-[11px] font-bold rounded-lg transition-all" data-filter="all">الكل</button>
+            <button class="filterBtn flex-1 py-2 text-[10px] font-black rounded-lg transition-all" data-filter="pending">المعلقة</button>
+            <button class="filterBtn flex-1 py-2 text-[10px] font-black rounded-lg transition-all" data-filter="approved">المعتمدة</button>
+            <button class="filterBtn flex-1 py-2 text-[10px] font-black rounded-lg transition-all" data-filter="all">الكل</button>
         </div>
-        <input type="text" id="searchBox" placeholder="ابحث باسم المادة..." class="px-4 py-2 text-sm w-full">
-        <div class="flex items-center justify-around bg-slate-900 rounded-xl border border-slate-800 text-[11px]">
-            <span>معلق: <b id="pendingCount" class="text-amber-500">0</b></span>
-            <div class="w-[1px] h-4 bg-slate-800"></div>
-            <span>معتمد: <b id="approvedCount" class="text-emerald-500">0</b></span>
+        <input type="text" id="searchBox" placeholder="بحث سريع في الأرشيف..." class="px-4 py-2 text-sm w-full">
+        <div class="flex items-center justify-around bg-slate-900 rounded-xl border border-slate-800 text-[10px] font-bold">
+            <span class="text-amber-500">متبقي: <b id="pendingCount">0</b></span>
+            <span class="text-emerald-500">تم نشرها: <b id="approvedCount">0</b></span>
         </div>
       </div>
 
       <table class="desktop-table">
-        <thead class="text-[11px] text-slate-500 uppercase">
+        <thead class="text-[10px] text-slate-500 uppercase tracking-tighter">
             <tr class="text-right">
-                <th class="p-3">المادة</th>
-                <th class="p-3">ملاحظة اللجنة العلمية</th>
-                <th class="p-3 text-center">بواسطة</th>
-                <th class="p-3 text-center">العمليات</th>
+                <th class="p-3">اسم المادة</th>
+                <th class="p-3">ملاحظة التدقيق العلمي</th>
+                <th class="p-3 text-center">المسؤول</th>
+                <th class="p-3 text-center">الإجراء</th>
             </tr>
         </thead>
         <tbody id="desktopList"></tbody>
       </table>
 
-      <div id="mobileList" class="mobile-list space-y-3"></div>
+      <div id="mobileList" class="md:hidden space-y-3"></div>
     </main>
 
-    <div id="loginCard" class="max-w-xs mx-auto mt-24 p-6 bg-slate-900 border border-slate-800 rounded-2xl text-center">
-      <h2 class="text-sm font-bold mb-6">نظام الدخول</h2>
-      <form id="loginForm" class="space-y-3">
+    <div id="loginCard" class="max-w-xs mx-auto mt-24 p-8 bg-slate-900 border border-slate-800 rounded-[2rem] text-center shadow-2xl">
+      <div class="mb-6 text-3xl">🔑</div>
+      <form id="loginForm" class="space-y-4">
         <input type="email" id="email" placeholder="البريد" class="w-full p-3 text-xs" required>
-        <input type="password" id="password" placeholder="الرمز" class="w-full p-3 text-xs" required>
-        <button type="submit" class="w-full bg-blue-600 py-3 rounded-xl font-bold text-xs">دخول</button>
+        <input type="password" id="password" placeholder="السر" class="w-full p-3 text-xs" required>
+        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-500 py-3 rounded-xl font-black text-xs transition-all">دخول النظام</button>
       </form>
     </div>
   </div>
